# uva_cv1

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml
notebooks/: CV1_Lab3_Students.ipynb  Lab3.ipynb  Lab4.ipynb
