[tool.poetry]
name = "uva-cv1"
version = "0.1.0"
description = ""
authors = ["dqmis <dom.seputis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "^1.26.0"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
scipy = "^1.11.3"


[tool.poetry.group.dev.dependencies]
nbqa = "^1.7.0"
black = "^23.9.1"
ipykernel = "^6.25.2"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Dev tools setup

[tool.flake8]
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | condaenv
)/
'''
max_line_length = 99
max-complexity = 18

[tool.black]
line-length = 99
preview = true
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | condaenv
)/
'''

[tool.isort]
profile = "black"
line_length = 99
